--- a/Practicals/practical3/Assignment1_DAM202.ipynb
+++ b/Practicals/practical3/Assignment1_DAM202.ipynb
@@ -165,7 +165,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 445
+          "height": 594
         },
         "id": "AdFicwtO_dYb",
         "outputId": "53841e91-f4c9-4c69-a68d-04d179576b9f"
@@ -3690,7 +3690,7 @@
         "from sklearn.metrics import confusion_matrix\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "\n",
+        "# Extrinsic Evaluation\n",
         "\n",
         "def evaluate_model(X_train, X_test, y_train, y_test, model_name):\n",
         "    clf = LogisticRegression(max_iter=1000, random_state=42)\n",
@@ -3793,6 +3793,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "\n",
+        "# === Intrinsic Evaluation for Word Embeddings ===\n",
+        "def intrinsic_evaluation(model, word_pairs):\n",
+        "    \"\"\"\n",
+        "    Compute cosine similarity for given word pairs using trained embeddings.\n",
+        "    \"\"\"\n",
+        "    print(f\"\\n=== Intrinsic Evaluation: {type(model).__name__} ===\\n\")\n",
+        "    for w1, w2 in word_pairs:\n",
+        "        if w1 in model.wv and w2 in model.wv:\n",
+        "            sim = cosine_similarity(\n",
+        "                [model.wv[w1]], [model.wv[w2]]\n",
+        "            )[0][0]\n",
+        "            print(f\"Similarity({w1}, {w2}) = {sim:.4f}\")\n",
+        "        else:\n",
+        "            print(f\"One of the words ({w1}, {w2}) not in vocabulary.\")\n",
+        "\n",
+        "# Example word pairs (modify depending on dataset vocabulary)\n",
+        "word_pairs = [\n",
+        "    (\"phishing\", \"fraud\"),\n",
+        "    (\"email\", \"message\"),\n",
+        "    (\"bank\", \"money\"),\n",
+        "    (\"login\", \"password\"),\n",
+        "    (\"safe\", \"dangerous\")\n",
+        "]\n",
+        "\n",
+        "# Run intrinsic evaluation for both models\n",
+        "intrinsic_evaluation(w2v_model, word_pairs)\n",
+        "intrinsic_evaluation(ft_model, word_pairs)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DAvGvMdRBUsJ",
+        "outputId": "6b2770db-44b4-4be9-f9fc-380012c813e8"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "=== Intrinsic Evaluation: Word2Vec ===\n",
+            "\n",
+            "Similarity(phishing, fraud) = 0.4578\n",
+            "Similarity(email, message) = 0.5866\n",
+            "Similarity(bank, money) = 0.6096\n",
+            "Similarity(login, password) = 0.6875\n",
+            "Similarity(safe, dangerous) = 0.3566\n",
+            "\n",
+            "=== Intrinsic Evaluation: FastText ===\n",
+            "\n",
+            "Similarity(phishing, fraud) = 0.5324\n",
+            "Similarity(email, message) = 0.6299\n",
+            "Similarity(bank, money) = 0.5597\n",
+            "Similarity(login, password) = 0.6993\n",
+            "Similarity(safe, dangerous) = 0.4462\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 13. Word Frequency Analysis\n",
@@ -3839,7 +3905,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 904
         },
         "id": "8CWVa9gwms1-",
         "outputId": "9c4b1b3f-da8b-435c-de7d-7577b5f85fb7"
